fix(wc): widget header link icon and truncate link text

--- a/packages/ui/src/assets/scss/layers/widgets.scss
+++ b/packages/ui/src/assets/scss/layers/widgets.scss
@@ -35,11 +35,19 @@
           padding: 16px 12px;
           text-align: start;
 
-          > .focus-indicator {
-            display: none;
+          > a {
+            @include link-unstyled;
+            display: inline-flex;
+            align-items: center;
+            gap: 4px;
+
+            > .focus-indicator {
+              display: none;
+            }
           }
 
-          > .heading {
+          > .heading,
+           > a > .heading {
             @include link-unstyled;
 
             > h3 {
@@ -62,7 +70,7 @@
             font-weight: bold;
           }
 
-          > .focus-indicator,
+          > a > .focus-indicator,
           > .folded-indicator {
             font-size: 16px;
             margin: 4px;
@@ -73,18 +81,17 @@
         > div {
           display: none !important;
 
-          &:has(.heading:hover, > .heading:focus-visible) {
+          > a:hover,
+          > a:focus-visible {
+            outline: none;
+
             > .focus-indicator {
               display: unset;
               color: var(--#{$prefix}primary);
             }
 
-            > .heading {
-              outline: none;
-
-              > h3 {
-                color: var(--#{$prefix}primary);
-              }
+            > .heading > h3 {
+              color: var(--#{$prefix}primary);
             }
           }
         }
@@ -124,8 +131,15 @@
               height: 40px;
 
               > .icon {
+                flex-shrink: 0;
                 height: 20px;
                 width: 20px;
+              }
+
+              > span {
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
               }
 
               &:hover,
